# backend/api/merchant/order/v1/order.swagger.json
@@ -199,6 +199,10 @@
         "paymentStatus": {
           "$ref": "#/definitions/v1PaymentStatus",
           "title": "支付状态（NOT_PAID/PROCESSING/PAID/FAILED/CANCELLED）"
+        },
+        "shippingStatus": {
+          "$ref": "#/definitions/v1ShippingStatus",
+          "title": "货运状态"
         }
       },
       "title": "订单的消息结构"
@@ -239,11 +243,25 @@
         "PROCESSING",
         "PAID",
         "FAILED",
-        "CANCELLED"
+        "CANCELLED_PAID"
       ],
       "default": "NOT_PAID",
-      "description": "- NOT_PAID: 未支付\n - PROCESSING: 处理中\n - PAID: 已支付\n - FAILED: 支付失败\n - CANCELLED: 取消支付",
+      "description": "- NOT_PAID: 未支付\n - PROCESSING: 处理中\n - PAID: 已支付\n - FAILED: 支付失败\n - CANCELLED_PAID: 取消支付",
       "title": "支付状态的枚举类型"
+    },
+    "v1ShippingStatus": {
+      "type": "string",
+      "enum": [
+        "PENDING_SHIPMENT",
+        "SHIPPED",
+        "IN_TRANSIT",
+        "DELIVERED",
+        "CONFIRMED",
+        "CANCELLED_SHIPMENT"
+      ],
+      "default": "PENDING_SHIPMENT",
+      "description": "- PENDING_SHIPMENT: 待发货\n - SHIPPED: 已发货\n - IN_TRANSIT: 运输中\n - DELIVERED: 已送达\n - CONFIRMED: 已收货\n - CANCELLED_SHIPMENT: 已取消发货",
+      "title": "货运状态的枚举类型"
     }
   }
 }
