# backend/application/order/internal/data/models/models.go
@@ -29,13 +29,16 @@ type OrdersOrders struct {
 
 // 子订单表，按商家分单存储
 type OrdersSubOrders struct {
-	ID          int64          `json:"id"`
-	OrderID     int64          `json:"orderID"`
-	MerchantID  uuid.UUID      `json:"merchantID"`
-	TotalAmount pgtype.Numeric `json:"totalAmount"`
-	Currency    string         `json:"currency"`
-	Status      string         `json:"status"`
-	Items       []byte         `json:"items"`
-	CreatedAt   time.Time      `json:"createdAt"`
-	UpdatedAt   time.Time      `json:"updatedAt"`
+	ID             int64          `json:"id"`
+	OrderID        int64          `json:"orderID"`
+	MerchantID     uuid.UUID      `json:"merchantID"`
+	TotalAmount    pgtype.Numeric `json:"totalAmount"`
+	Currency       string         `json:"currency"`
+	Status         string         `json:"status"`
+	Items          []byte         `json:"items"`
+	CreatedAt      time.Time      `json:"createdAt"`
+	UpdatedAt      time.Time      `json:"updatedAt"`
+	ShippingStatus string         `json:"shippingStatus"`
+	TrackingNumber *string        `json:"trackingNumber"`
+	Carrier        *string        `json:"carrier"`
 }
